// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetResolutionCache correctly clears out 1`] = `
Array [
  "test@2x.ios.png",
  "test@1x.ios.png",
  "test@1.5x.ios.png",
  "test@3x.ios.png",
]
`;

exports[`AssetResolutionCache finds the correct assets 1`] = `
Array [
  "test@2x.ios.png",
  "test@1x.ios.png",
  "test@1.5x.ios.png",
]
`;
